--- a/app/css/style.css
+++ b/app/css/style.css
@@ -63,6 +63,23 @@
   color: #926318;
 }
 
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+}
+@media (min-width: 992px) {
+  .modal-lg {
+    width: 900px;
+  }
+}
+@media (min-width: 768px) {
+  .modal-xl {
+    width: 90%;
+    max-width: 1200px;
+  }
+}
 .app-title {
   font-family: "Lusitana", serif;
   font-weight: bolder;
@@ -193,7 +210,7 @@ html, body {
   background: goldenrod;
   border: none;
   transition: .3s ease-in-out;
-  margin-left: 24%;
+  margin-left: 20%;
 }
 
 .rrnavbar-fixed {
@@ -270,11 +287,11 @@ html, body {
 }
 
 .rr-margin-left-60, .item5:hover ~ #floatingline {
-  margin-left: 65% !important;
+  margin-left: 66% !important;
 }
 
-.rr-margin-left-70, .item6:hover ~ #floatingline {
-  margin-left: 73% !important;
+.rr-margin-left-70 {
+  margin-left: 77% !important;
 }
 
 .goldline {
@@ -368,4 +385,22 @@ html, body {
 .transparent-back-white {
   background-color: white;
   opacity: 0.8;
+}
+
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+}
+@media (min-width: 992px) {
+  .modal-lg {
+    width: 900px;
+  }
+}
+@media (min-width: 768px) {
+  .modal-xl {
+    width: 90%;
+    max-width: 1200px;
+  }
 }
