--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -34,11 +34,27 @@
 
         min-height: 500px;
     }
+    #ulsavamDiv{
+        background-image: url('http://i.imgur.com/fX52xYv.jpg');
+
+        min-height: 600px;
+    }
+    #ulsavamDiv h5,#ulsavamDiv h4{
+        font-weight: bold;
+        color:white;
+    }
     @media (max-width: 768px) {
         #deviDiv{
             background-image: url(images/temsmaller.jpg);
             width: 360px;
             min-height: 500px;
+        }
+         #ulsavamDiv{
+            background-image: url('http://i.imgur.com/Qd3jfda.jpg');
+            min-height: 500px;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
         }
     }
     #Yagamdiv{
@@ -49,6 +65,17 @@
 
 </style>
 <div class="slide">
+
+        <section class="parallax wow fadeInUp" id="ulsavamDiv">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <div class="container text-center">
+                <h5>കൊല്ലം കടപ്പാക്കട ശ്രീരാജരാജേശ്വരിദേവീക്ഷേത്രത്തിൽ</h5>
+                <h4>ശ്രീ മഹാ തിരുനാൾ മഹോത്സവം</h4>
+                <br><br><br><br><br><br><br><br>
+                <button type="button" class="btn btn-link ulsavamBtn" data-target="#ulsavamModal" data-toggle="modal" style="color: white;"><span style="font-weight:bold">Read More</span></button>
+            </div>
+        </section>
+
         <div id="myCarousel" class="carousel slide carousel-fade hoverable"   data-ride="carousel" >
             <!-- Indicators -->
             <ol class="carousel-indicators">
