--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -73,6 +73,8 @@
                 <h4>ശ്രീ മഹാ തിരുനാൾ മഹോത്സവം</h4>
                 <br><br><br><br><br><br><br><br>
                 <button type="button" class="btn btn-link ulsavamBtn" data-target="#ulsavamModal" data-toggle="modal" style="color: white;"><span style="font-weight:bold">Read More</span></button>
+                <br><br><br>
+                <span style="font-size: large;font-weight: bold;">സൂര്യമണ്ഡലാകൃതിയിലുള്ള നവഗ്രഹ പ്രതിഷ്ഠാ കർമ്മം</span>
             </div>
         </section>
 
