--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -35,7 +35,7 @@
         min-height: 500px;
     }
     #ulsavamDiv{
-        background-image: url('http://i.imgur.com/fX52xYv.jpg');
+        background-image: url(images/ulsavam/banner.jpg);
 
         min-height: 600px;
     }
@@ -50,7 +50,7 @@
             min-height: 500px;
         }
          #ulsavamDiv{
-            background-image: url('http://i.imgur.com/Qd3jfda.jpg');
+            background-image: url(images/ulsavam/banner.jpg);
             min-height: 500px;
             background-repeat: no-repeat;
             background-attachment: fixed;
