--- a/app/src/gallery/views/gallery.html
+++ b/app/src/gallery/views/gallery.html
@@ -102,8 +102,59 @@
         </div>
     </div>
 
-
-    <br><br><br><br>
-
+    </div>
 
 </div>
+
+
+<br>
+<div class="container text-center">
+    <br>
+    <h5>Devotional Songs</h5>        
+    <br>
+    <h5>
+
+            Vadakkekunnathu sree raja rajeswari devi sankeerthanangal
+        </h5>
+            <br>
+            <span>
+            Music: Sri. Sunil Kumar <br>
+            Singers: Sudeep Kumar, Dr. Rashmi Madhu<br>
+            Lyrics: Sri. B.C.Bose<br>
+            Recording: Aarabhi Record Inn, TVM, IVA Digital EKM,
+            Engineers: Mesmin & Bineesh<br>
+            Mixed by: Ani.M.Arjun
+            <br>
+            Produced and copy right owned by :
+            <b>RUDRANI AUDIOS</b>
+            </span>
+            <br><br><br><br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+            <br><br>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/r1yMvou9gqw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/316ARSmjhNY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/h66Sv6D4DzQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/_kMxXGBdGSk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/HRr_xmrdnL0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/mu8hOnZuuys" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/HhYpsNpLS0k" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/tJRZf3NsaPY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/iKO66vzPxUg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/fBlMuE23tz4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/gVj2bd8_JTI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/bL5eJQzznsk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/EQPOsCdaP0s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/7h-5FyEX6yM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/7h-5FyEX6yM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/pis9DW_k43U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/-AagKovSp3g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/OIZ-4l0qLP4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/MFyAINsC7nI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/0bwXPttsRLU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/xatJ7IJ8m-M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="280" height="180" src="https://www.youtube.com/embed/C91zgyX2e-U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <br><br><br><br>
+    <div class="container">
+
+    </div>
