responsiveness added for video

--- a/app/src/gallery/views/gallery.html
+++ b/app/src/gallery/views/gallery.html
@@ -129,7 +129,8 @@
             <b>RUDRANI AUDIOS</b>
             </span>
             <br><br><br><br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="hidden-xs hidden-sm" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="hidden-md hidden-lg" width="280" height="180" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
             <br><br>
             <iframe width="280" height="180" src="https://www.youtube.com/embed/r1yMvou9gqw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
