--- a/app/src/home/views/home.html
+++ b/app/src/home/views/home.html
@@ -265,7 +265,8 @@
             <h5>കൊല്ലം കടപ്പാക്കട ശ്രീരാജരാജേശ്വരിദേവീക്ഷേത്ര</h5>
             <h4>ഭക്തിഗാനങ്ങൾ</h4>
             <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="hidden-xs hidden-sm" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="hidden-md hidden-lg" width="280" height="180" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             <br><br><br>
         </div>
     </section>
