--- a/app/src/gallery/views/gallery.html
+++ b/app/src/gallery/views/gallery.html
@@ -27,14 +27,25 @@
 <div class="container text-center">
     <div class="container">
         <h3 class="maketextgold">Gallery</h3>
-        <ul class="wow slideInUp docs-pictures clearfix" style="visibility: visible; animation-name: slideInUp;">
+        <ul class="wow slideInUp docs-pictures clearfix" style="visibility: visible; animation-name: slideInUp;">            
+                
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/DNm7qtZ.jpg" src="https://i.imgur.com/DNm7qtZt.jpg" alt=""></li>
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/iUXOHeM.jpg" src="https://i.imgur.com/iUXOHeMt.jpg" alt=""></li>
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/hek8fm9.jpg" src="https://i.imgur.com/hek8fm9t.jpg" alt=""></li>
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/3NgJYcK.jpg" src="https://i.imgur.com/3NgJYcKt.jpg" alt=""></li>
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/j8iIV0T.jpg" src="https://i.imgur.com/j8iIV0Tt.jpg" alt=""></li>
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/0U21D6S.jpg" src="https://i.imgur.com/0U21D6St.jpg" alt=""></li>
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/2tbEHBq.jpg" src="https://i.imgur.com/2tbEHBqt.jpg" alt=""></li>
+            <li class="waves-effect waves-light"><img data-original="https://i.imgur.com/lfjuIha.jpg" src="https://i.imgur.com/lfjuIhat.jpg" alt=""></li>
+            
+
             <li class="waves-effect waves-light"><img data-original="http://i.imgur.com/ggaG3uD.jpg" src="http://i.imgur.com/ggaG3uDs.jpg" alt="Sthoopam at kadappakada junction, kollam"></li>
             <li class="waves-effect waves-light"><img data-original="http://i.imgur.com/5eXbjM8h.jpg" src="http://i.imgur.com/5eXbjM8s.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://i.imgur.com/XTIrqvH.jpg" src="http://i.imgur.com/XTIrqvHs.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://imgur.com/hfRDcYF.jpg" src="http://i.imgur.com/hfRDcYFs.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://imgur.com/kzkt99d.jpg" src="http://i.imgur.com/kzkt99ds.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://imgur.com/ZdggJAv.jpg" src="http://i.imgur.com/ZdggJAvs.jpg" alt=""></li>
-            <li class=" waves-effect waves-light"><img data-original="http://imgur.com/qWYM3zC.jpg"     src="http://i.imgur.com/qWYM3zCs.jpg" alt=""></li>-->
+            <li class=" waves-effect waves-light"><img data-original="http://imgur.com/qWYM3zC.jpg"     src="http://i.imgur.com/qWYM3zCs.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://imgur.com/fxpu0WC.jpg" src="http://i.imgur.com/fxpu0WCs.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://i.imgur.com/5qssr38.jpg" src="http://i.imgur.com/5qssr38s.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://i.imgur.com/L1eIZwV.jpg" src="http://i.imgur.com/L1eIZwVs.jpg" alt=""></li>
@@ -49,8 +60,8 @@
             <li class="waves-effect waves-light"><img data-original="http://i.imgur.com/kdDIppkh.jpg" src="http://i.imgur.com/kdDIppks.jpg" alt=""></li>
             <li class="waves-effect waves-light"><img data-original="http://i.imgur.com/4jiJAmih.jpg" src="http://i.imgur.com/4jiJAmis.jpg" alt=""></li>
             <li class="waves-effect waves-light"><img data-original="http://i.imgur.com/L1eIZwVh.jpg" src="http://i.imgur.com/L1eIZwVs.jpg" alt=""></li>
-
             
+
             
 
         </ul>
